--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "homepage": "https://github.com/Saurabhdaswant/SSF_logger#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.1",
     "nodemon": "^2.0.15"
   }
 }
