--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
