--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-bootstrap": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
