--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "recharts": "^2.1.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "react-bootstrap": "^2.2.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
