--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/lab": "^5.0.0-alpha.73",
+    "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +17,6 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "react-table": "^7.7.0",
     "recharts": "^2.1.9",
     "tailwind-scrollbar-hide": "^1.1.7",
     "universal-cookie": "^4.0.4",
