--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "homepage": "https://github.com/Saurabhdaswant/SSF_logger#readme",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.5.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
